force-app/main/default/objects/Resource_Pool__c/Resource_Pool__c.object-meta.xml
<CustomObject>
    <description>This object stores information about potential future positions at Unisource. This does not contain detailed information about real reqs.</description>
    <label>Resource Pool</label>
    <nameField>
        <label>Resource Pool</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Pools</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>