force-app/main/default/objects/Resource_Pool__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The AVP that this resource pool rolls up to.</inlineHelpText>
    <label>AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Pools1</relationshipName>
    <type>Lookup</type>
</CustomField>