force-app/main/default/objects/Resource_Pool__c/fields/Pool_Type__c.field-meta.xml
<CustomField>
    <fullName>Pool_Type__c</fullName>
    <label>Pool Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Customer Service Professional</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>