force-app/main/default/objects/Resource_Pool__c/fields/Total_Active_Contenders__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Contenders__c</fullName>
    <inlineHelpText>Includes all Contenders related to this Pool except those Hired, Rejected, or who have withdrawn.</inlineHelpText>
    <label>Total Active Contenders</label>
    <summaryFilterItems>
        <field>Contender__c.Status__c</field>
        <operation>notEqual</operation>
        <value>5 - Contender Withdrew, 7 - Rejected, 8 - Hired</value>
    </summaryFilterItems>
    <summaryForeignKey>Contender__c.Resource_Pool__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>