force-app/main/default/objects/Resource_Pool__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Total_Active_Contenders__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>